Squashed alpha-1.5.0-pre07
commit 96cdbbacc909e505cf769087bd799a2c17b9b61c
Merge: 907b16f a45828e
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Nov 1 15:44:24 2015 +0100

    Merge branch '1.5.x' of https://github.com/freeplane/freeplane into 1.5.x

commit 907b16fca492c1541c58e7b0baa5d2bfe79d368e
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Nov 1 15:44:03 2015 +0100

    Remove action from menu because it is does not exist any more

commit a45828ea9ea356acb5d450f1e46f668b70da960b
Merge: 1d1e994 2209b67
Author: Weblate <noreply@weblate.org>
Date:   Sun Nov 1 15:37:39 2015 +0100

    Merge remote-tracking branch 'origin/1.5.x' into 1.5.x

commit 2209b679c68b0f4d7efc624360de42037ec95822
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Nov 1 15:37:35 2015 +0100

    format translation

commit 1d1e994938c601989110bf76ebefdc078a660bc6
Merge: 61c4dcb 55885f2
Author: Weblate <noreply@weblate.org>
Date:   Sun Nov 1 15:30:02 2015 +0100

    Merge remote-tracking branch 'origin/1.5.x' into 1.5.x

commit 61c4dcbe439155548aee36bfc1f7efca2a9a4f07
Author: Ldm Public <ldmpub@gmail.com>
Date:   Sun Nov 1 14:03:05 2015 +0100

    Translated using Weblate (French)

    Currently translated at 99.3% (1815 of 1826 strings)

commit de2d063b32c6815fdff287dcd3f8365d88d9f298
Author: jan madsen <jsm@janz.dk>
Date:   Sun Nov 1 13:25:55 2015 +0100

    Translated using Weblate (Danish)

    Currently translated at 98.1% (1792 of 1826 strings)

commit 55885f206347a87aee41acc9aefb353320b35f91
Merge: 88dea47 317f5c8
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Nov 1 15:29:58 2015 +0100

    Merge branch '1.5.x' of https://github.com/freeplane/freeplane into 1.5.x

commit 88dea472ae8c9a9bee7c9b78380b774f28d133a7
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Nov 1 15:27:07 2015 +0100

    Add additional width of 40 pt to root node preferred size

commit 096a5d1a8e4150e53f327f717d2783dcb6de3054
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun N

--- a/freeplane/resources/translations/Resources_fr.properties
+++ b/freeplane/resources/translations/Resources_fr.properties
@@ -137,6 +137,8 @@ attributes_visible_tooltip=S\u00E9lectionner ce qui est visible
 automatic_layout=Style automatique
 automatic_layout_disabled=D\u00E9sactiv\u00E9
 automatically_save_message=Carte sauvegard\u00E9e automatiquement sous : {0}
+AutomaticEdgeColor.FOR_COLUMN=pour colonne
+AutomaticEdgeColor.ON_BRANCH_CREATION=lors de la cr\u00E9ation d'une branche
 AutomaticEdgeColorHookAction.text=Couleur de ligne automatique
 AutomaticLayout.ALL=Pour tous les niveaux
 AutomaticLayout.COLUMNS=pour les colonnes
