--- a/freeplane/resources/translations/Resources_pt_PT.properties
+++ b/freeplane/resources/translations/Resources_pt_PT.properties
@@ -137,6 +137,8 @@ attributes_visible_tooltip=Selecionados vis\u00EDveis
 automatic_layout=Desenho autom\u00E1tico
 automatic_layout_disabled=desativado
 automatically_save_message=O mapa foi gravado automaticamente (com o nome {0})...
+AutomaticEdgeColor.FOR_COLUMN=para coluna
+AutomaticEdgeColor.ON_BRANCH_CREATION=ao criar ramo
 AutomaticEdgeColorHookAction.text=Cor da linha autom\u00E1tica
 AutomaticLayout.ALL=para todos os n\u00F3s
 AutomaticLayout.COLUMNS=para colunas
