--- a/freeplane/resources/translations/Resources_zh_TW.properties
+++ b/freeplane/resources/translations/Resources_zh_TW.properties
@@ -137,6 +137,8 @@ attributes_visible_tooltip=\u986F\u793A/\u96B1\u85CF
 automatic_layout=\u81EA\u52D5\u6392\u7248
 automatic_layout_disabled=\u4E0D\u4F7F\u7528
 automatically_save_message=\u6A94\u6848\u81EA\u52D5\u5B58\u6A94 (\u6A94\u540D\u662F{0}) ...
+AutomaticEdgeColor.FOR_COLUMN=\u70BA\u6B04\u4F4D
+AutomaticEdgeColor.ON_BRANCH_CREATION=\u5728\u5206\u652F\u5275\u7ACB
 AutomaticEdgeColorHookAction.text=\u81EA\u52D5\u5206\u652F\u984F\u8272
 AutomaticLayout.ALL=\u6240\u6709
 AutomaticLayout.COLUMNS=\u70BA\u6B04\u4F4D
