--- a/freeplane/viewer-resources/translations/Resources_en.properties
+++ b/freeplane/viewer-resources/translations/Resources_en.properties
@@ -137,16 +137,17 @@ attributes_visible_tooltip=Selected visible
 automatic_layout=Automatic layout
 automatic_layout_disabled=disabled
 automatically_save_message=Map was automatically saved (using the file name {0}) ...
+AutomaticEdgeColor.FOR_BRANCHES=for branches
+AutomaticEdgeColor.FOR_COLUMNS=for columns
+AutomaticEdgeColor.ON_BRANCH_CREATION=on branch creation
 AutomaticEdgeColorHookAction.text=Automatic edge color
 AutomaticLayout.ALL=for all nodes
-AutomaticLayout.COLUMNS=for columns
 AutomaticLayout.HEADINGS=for non leave nodes
 AutomaticLayout.level=Level {0}
 AutomaticLayout.level.root=Root
 AutomaticLayoutAction.text=&Apply level styles
 AutomaticLayoutAction.tooltip=<html>Fixes the layout of the map. <br>The first level is black, the second blue, etc.</html>
 AutomaticLayoutControllerAction.ALL.text=for all nodes
-AutomaticLayoutControllerAction.COLUMNS.text=for columns
 AutomaticLayoutControllerAction.HEADINGS.text=for non leave nodes
 AutomaticLayoutControllerAction.null.text=disabled
 BackAction.text=Go backward
