--- a/freeplane/resources/translations/Resources_ja.properties
+++ b/freeplane/resources/translations/Resources_ja.properties
@@ -674,6 +674,11 @@ LatexInsertLatexAction.msg1=<html>LaTeX \u6570\u5F0F\u3092<i>\u53E4\u3044</i>\u6
 LatexInsertLatexAction.msg2=<html>\u8981\u7D04\uFF1A<ul><li>\u30CE\u30FC\u30C9\u30C6\u30AD\u30B9\u30C8\u306E\u5148\u982D\u306B "\\latex " \u3092\u5165\u529B\u3059\u308B\u3002\u307E\u305F\u306F\u3001</li><li><i>\u8868\u793A\u2192\u30D7\u30ED\u30D1\u30C6\u30A3\u30D1\u30CD\u30EB</i> \u305D\u306E\u5F8C <i>\u30CE\u30FC\u30C9\u30B3\u30A2\u306E\u30C6\u30AD\u30B9\u30C8\u2192\u30C6\u30F3\u30D7\u30EC\u30FC\u30C8\uFF0F\u66F8\u5F0F\u2192LaTeX</i></li></ul></html>
 LatexInsertLatexAction.text=LaTeX \u6570\u5F0F\u3092\u4ED8\u52A0(&L)...
 latexPatternFormat=LaTeX
+LengthUnits.cm=cm
+LengthUnits.in=in
+LengthUnits.mm=mm
+LengthUnits.pt=pt
+LengthUnits.px=px
 less_than_two_selected_nodes=\u30B3\u30CD\u30AF\u30BF\u3092\u633F\u5165\u3059\u308B\u306B\u306F\u3001\u4E8C\u3064\u4EE5\u4E0A\u306E\u30CE\u30FC\u30C9\u3092\u9078\u629E\u3057\u3066\u304F\u3060\u3055\u3044\u3002
 license=\u30E9\u30A4\u30BB\u30F3\u30B9\uFF1AGPL 2 \u307E\u305F\u306F\u305D\u308C\u4EE5\u964D
 license_text=<html>This program is free software; you can redistribute it and/or<br>modify it under the terms of the GNU General Public License<br>as published by the Free Software Foundation; either version 2<br>of the License, or (at your option) any later version.<br><br>This program is distributed in the hope that it will be useful,<br>but WITHOUT ANY WARRANTY; without even the implied warranty of<br>MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the<br>GNU General Public License for more details.<br><br>You should have received a copy of the GNU General Public License<br>along with this program; if not, write to the Free Software<br>Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.</html>
@@ -918,6 +923,7 @@ OptionPanel.backup_file_number=\u30D0\u30C3\u30AF\u30A2\u30C3\u30D7\u30D5\u30A1\
 OptionPanel.Behaviour=\u52D5\u4F5C\u8A2D\u5B9A
 OptionPanel.bezier=\u30D9\u30B8\u30A7\u66F2\u7DDA
 OptionPanel.bubble=\u56F2\u307F
+OptionPanel.bubble_vertical_margin=\u56F2\u307F\u306E\u30DE\u30FC\u30B8\u30F3
 OptionPanel.ca=\u30AB\u30BF\u30ED\u30CB\u30A2\u8A9E\uFF08\u30D0\u30EC\u30F3\u30B7\u30A2\uFF09\uFF0FCatal\u00E0
 OptionPanel.Cancel=\u30AD\u30E3\u30F3\u30BB\u30EB
 OptionPanel.center_selected_node=\u9078\u629E\u30CE\u30FC\u30C9\u3092\u4E2D\u592E\u3078
@@ -1280,6 +1286,7 @@ OptionPanel.structured_icon_toolbar=\u5DE6\u30C4\u30FC\u30EB\u30D0\u30FC\u306E\u
 OptionPanel.summary=\u307E\u3068\u3081
 OptionPanel.sv=\u30B9\u30A6\u30A7\u30FC\u30C7\u30F3\u8A9E\uFF0Fsvenska
 OptionPanel.text.use_ctrl_key=\u300C\u30C4\u30FC\u30EB\u300D\u30E1\u30CB\u30E5\u30FC\u306E\u300C\u30B7\u30E7\u30FC\u30C8\u30AB\u30C3\u30C8\u30AD\u30FC\u306E\u5272\u308A\u5F53\u3066\u300D\u3092\u4F7F\u7528\u3057\u3066\u304F\u3060\u3055\u3044\u3002
+OptionPanel.textalignment=\u6587\u5B57\u63C3\u3048
 OptionPanel.time_for_automatic_save=\u81EA\u52D5\u4FDD\u5B58\u9593\u9694(\u30DF\u30EA\u79D2)
 OptionPanel.time_for_automatic_save.tooltip=<html> \u81EA\u52D5\u4FDD\u5B58\u306E\u9593\u9694(\u30DF\u30EA\u79D2)\u3002<br>\u81EA\u52D5\u4FDD\u5B58\u3092\u7121\u52B9\u306B\u3059\u308B\u306B\u306F\u3001\u3053\u306E\u6570\u5024\u30922000000000\u306B\u8A2D\u5B9A\u3057\u3066\u304F\u3060\u3055\u3044\u3002</html>
 OptionPanel.time_for_delayed_selection=\u81EA\u52D5\u9078\u629E\u307E\u3067\u306E\u6642\u9593(\u30DF\u30EA\u79D2)
@@ -1289,6 +1296,7 @@ OptionPanel.toolTipManager.initialDelay=\u6700\u521D\u306B\u8868\u793A\u3059\u30
 OptionPanel.toolTipManager.max_tooltip_width=\u30CE\u30FC\u30C9\u30C4\u30FC\u30EB\u30C1\u30C3\u30D7\u306E\u6700\u5927\u8868\u793A\u5E45
 OptionPanel.toolTipManager.max_tooltip_width.tooltip=\u30C4\u30FC\u30EB\u30C1\u30C3\u30D7\u5E45\u306E\u521D\u671F\u8A2D\u5B9A(\u30D4\u30AF\u30BB\u30EB)
 OptionPanel.toolTipManager.reshowDelay=\u8868\u793A\u3092\u518D\u958B\u3059\u308B\u307E\u3067\u306E\u6642\u9593(\u30DF\u30EA\u79D2)
+OptionPanel.tr=\u30C8\u30EB\u30B3\u8A9E / T\u00FCrk\u00E7e
 OptionPanel.uk_UA=\u30A6\u30AF\u30E9\u30A4\u30CA\u8A9E\uFF0F\u0423\u043A\u0440\u0430\u0457\u043D\u0441\u044C\u043A\u0430
 OptionPanel.undefined_font=\u672A\u5B9A\u7FA9\u30D5\u30A9\u30F3\u30C8
 OptionPanel.undo_levels=\u5143\u306B\u623B\u3059\u56DE\u6570\u306E\u4E0A\u9650
@@ -1307,6 +1315,7 @@ OptionPanel.validate_invalid_number_format=\u6570\u5024\u306E\u6A19\u6E96\u66F8\
 OptionPanel.validate_write_without_read=\u30B9\u30AF\u30EA\u30D7\u30C8\uFF1A\u30D5\u30A1\u30A4\u30EB\u66F8\u304D\u8FBC\u307F\u306E\u4ED6\u306B\u3001\u30D5\u30A1\u30A4\u30EB\u8AAD\u307F\u8FBC\u307F\u3092\u4ED8\u52A0\u3059\u308B\u304B\u3069\u3046\u304B\u691C\u8A0E\u3057\u3066\u304F\u3060\u3055\u3044\u3002
 OptionPanel.validation_error=<html><body>\u691C\u8A3C\u30A8\u30E9\u30FC\uFF1A<p><em>{0}</em><p>\u74B0\u5883\u8A2D\u5B9A\u3092\u5909\u66F4\u3057\u3066\u30A8\u30E9\u30FC\u3092\u662F\u6B63\u3057\u3066\u304F\u3060\u3055\u3044\u3002</body></html>
 OptionPanel.validation_warning=<html><body>\u691C\u8A3C\u8B66\u544A\uFF1A<p><em>{0}</em></body></html>
+OptionPanel.vertical_child_gap.tooltip=\u5B50\u30CE\u30FC\u30C9\u9593\u306E\u4E0A\u4E0B\u306E\u9593\u9694
 OptionPanel.vi=\u30D9\u30C8\u30CA\u30E0\u8A9E\uFF0FTi\u1EBFng Vi\u1EC7t
 OptionPanel.wheel_velocity=\u52A0\u901F\u5EA6
 OptionPanel.wheel_velocity.tooltip=\u5024\u3092\u5927\u304D\u304F\u3059\u308B\u3068\u3001\u30DE\u30C3\u30D7\u4E0A\u306E\u30DE\u30A6\u30B9\u30DB\u30A4\u30FC\u30EB\u3067\u306E\u79FB\u52D5\u901F\u5EA6\u304C\u901F\u304F\u306A\u308A\u307E\u3059\u3002
