Squashed alpha-1.5.0-pre08
commit 29aa67b61be998fb0d4194496127f50453226050
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Mon Nov 2 18:46:09 2015 +0100

    format translations

commit 1a979fd3355a23c875ed36396eaca1146760efb4
Merge: 70b950c 4711e57
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Mon Nov 2 18:42:45 2015 +0100

    Merge branch '1.5.x' of https://github.com/freeplane/freeplane into 1.5.x

commit 70b950c6da4b2d00af106286dbe159a5fa7ca667
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Mon Nov 2 18:42:32 2015 +0100

    Fix ConditionalContentTransformer for 1.5.x

commit 4711e571b2b8597ff44e0853ddbba7def2439831
Merge: c8f5d73 16b08b4
Author: Weblate <noreply@weblate.org>
Date:   Mon Nov 2 18:39:34 2015 +0100

    Merge remote-tracking branch 'origin/1.5.x' into 1.5.x

commit c8f5d73f5bea72ae5e99b0094c104a6a5535dd59
Author: Pedro Albuquerque <palbuquerque73@gmail.com>
Date:   Sun Nov 1 19:35:28 2015 +0100

    Translated using Weblate (Portuguese (Portugal))

    Currently translated at 100.0% (1835 of 1835 strings)

commit 567a59068b6995793fb5484617cbf50c62c7189b
Author: Ldm Public <ldmpub@gmail.com>
Date:   Sun Nov 1 19:49:58 2015 +0100

    Translated using Weblate (French)

    Currently translated at 99.2% (1822 of 1835 strings)

commit 16b08b4c500266de830c4ce39f8e21828a0fd4a2
Merge: 39bd5f3 e0c8cf5
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Mon Nov 2 18:39:28 2015 +0100

    Merge branch '1.5.x' of https://github.com/freeplane/freeplane into 1.5.x

commit 39bd5f394d23a1c35045df991569bbd99bcbb4d2
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Mon Nov 2 18:35:13 2015 +0100

    fix zoomed insets in EditTextField

commit fc2287f399c4047fc7f85c5a9183f1c153e24552
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Mon Nov 2 08:57:57 2015 +0100

    Fix node minimum width when zoom is active

commit e0c8cf59e832d7d242b28a0d9191e8a9ee35b0fa
Author: ezjerry liao <ezjerry@gmail.com>
Date:   Mon Nov 2 06:12:26 2015 +0100

    Transl

--- a/freeplane/resources/translations/Resources_zh_TW.properties
+++ b/freeplane/resources/translations/Resources_zh_TW.properties
@@ -137,7 +137,9 @@ attributes_visible_tooltip=\u986F\u793A/\u96B1\u85CF
 automatic_layout=\u81EA\u52D5\u6392\u7248
 automatic_layout_disabled=\u4E0D\u4F7F\u7528
 automatically_save_message=\u6A94\u6848\u81EA\u52D5\u5B58\u6A94 (\u6A94\u540D\u662F{0}) ...
+AutomaticEdgeColor.FOR_BRANCHES=\u7D66\u5206\u652F
 AutomaticEdgeColor.FOR_COLUMN=\u70BA\u6B04\u4F4D
+AutomaticEdgeColor.FOR_COLUMNS=\u7D66\u6B04\u4F4D
 AutomaticEdgeColor.ON_BRANCH_CREATION=\u5728\u5206\u652F\u5275\u7ACB
 AutomaticEdgeColorHookAction.text=\u81EA\u52D5\u5206\u652F\u984F\u8272
 AutomaticLayout.ALL=\u6240\u6709
@@ -1129,6 +1131,10 @@ OptionPanel.outline_vgap=\u5782\u76F4\u9593\u8DDD
 OptionPanel.paint_connectors_behind=\u9023\u7D50\u7DDA\u5728\u7BC0\u9EDE\u4E0B\u9762
 OptionPanel.parse_data=\u8FA8\u8A8D\u8F38\u5165\u4E2D\u7684\u6578\u5B57\u548C\u65E5\u671F-\u6642\u9593
 OptionPanel.parse_data.tooltip=\u8A66\u8457\u89E3\u6790\u65E5\u671F\uFF0C\u65E5\u671F-\u6642\u9593\u548C\u6578\u5B57\u8F38\u5165\u4E26\u5957\u7528\u6A19\u6E96\u683C\u5F0F\u3002\u4F8B\u5982\uFF1A100,000.00\u300112/31\u300112/31/99\u30011999-12-31 \u548C  1999-12-31 23:59
+OptionPanel.parse_formulas=\u8A8D\u8B58\u516C\u5F0F
+OptionPanel.parse_formulas.tooltip=\u89E3\u6790\u516C\u5F0F\u5728 '='\u7BC0\u9EDE\u4E0A\u958B\u59CB : \u8ACB\u53C3\u95B1 http://www.freeplane.org/wiki/index.php/Formulas\u3002
+OptionPanel.parse_latex=\u8A8D\u8B58 LaTeX
+OptionPanel.parse_latex.tooltip=\u8A8D\u8B58 LaTeX \u516C\u5F0F\u7531\u683C\u5F0F\u6216\u5B57\u9996\uFF1A\u8ACB\u53C3\u95B1 http://www.freeplane.org/wiki/index.php/LaTeX_in_Freeplane\u3002
 OptionPanel.PASTE_HTML=\u8CBC\u4E0AHTML
 OptionPanel.PASTE_PLAIN_TEXT=\u8CBC\u4E0A\u7D14\u6587\u5B57
 OptionPanel.path_property_may_not_be_empty=\u8DEF\u5F91\u6027\u8CEA\u53EF\u80FD\u4E0D\u662F\u7A7A\u7684\uFF01\u8B8A\u66F4\u5DF2\u6062\u5FA9\u3002
@@ -1468,8 +1474,12 @@ save_unsaved=\u5132\u5B58\u4EE5\u4E0B\u5FC3\u667A\u5716\uFF1F
 save_unsaved_styles=\u5132\u5B58\u6A23\u5F0F\uFF1F
 SaveAcceleratorPresetsAction.text=\u5132\u5B58\u5FEB\u901F\u9375\u96C6...
 SaveAction.text=(&S)\u5B58\u6A94
+SaveAction_readonlyMsg=\u9019\u5FC3\u667A\u5716\u662F\u552F\u8B80\u3002\u8ACB\u4F7F\u7528 '\u6A94\u6848->\u53E6\u5B58\u65B0\u6A94...'\u4F86\u5132\u5B58\u9019\u5FC3\u667A\u5716\u3002
+SaveAction_readonlyTitle=\u8A66\u5716\u5132\u5B58\u552F\u8B80\u5FC3\u667A\u5716
 SaveAll.text=(&L)\u5132\u5B58\u6240\u6709\u5DF2\u958B\u555F\u5FC3\u667A\u5716
 SaveAll.tooltip=\u5132\u5B58\u6240\u6709\u5DF2\u958B\u555F\u5FC3\u667A\u5716
+SaveAs_toReadonlyMsg={0} \u662F\u552F\u8B80\u3002\u8ACB\u5132\u5B58\u70BA\u4E0D\u540C\u7684\u6A94\u6848\u3002
+SaveAs_toReadonlyTitle=\u8A66\u5716\u5132\u5B58\u5230\u552F\u8B80\u6A94\u6848
 SaveAsAction.text=\u53E6\u5B58\u65B0\u6A94...
 saved=\u5B58\u6A94\u5B8C\u7562
 saving_canceled=\u5132\u5B58\u53D6\u6D88
