--- a/freeplane/viewer-resources/translations/Resources_en.properties
+++ b/freeplane/viewer-resources/translations/Resources_en.properties
@@ -1128,6 +1128,10 @@ OptionPanel.outline_vgap=Vertical distance
 OptionPanel.paint_connectors_behind=Paint connectors behind nodes
 OptionPanel.parse_data=Recognize input of numbers and date-time
 OptionPanel.parse_data.tooltip=Try to parse date, date-time and number input and apply standard formats. Examples: 100,000.00, 12/31, 12/31/99, 1999-12-31 and 1999-12-31 23:59
+OptionPanel.parse_formulas=Recognize formulas
+OptionPanel.parse_formulas.tooltip=Parse formulas on nodes starting with '=': See http://www.freeplane.org/wiki/index.php/Formulas.
+OptionPanel.parse_latex=Recognize LaTeX
+OptionPanel.parse_latex.tooltip=Recognize LaTeX formulas by format or prefix: See http://www.freeplane.org/wiki/index.php/LaTeX_in_Freeplane.
 OptionPanel.PASTE_HTML=Paste as HTML
 OptionPanel.PASTE_PLAIN_TEXT=Paste as plain-text
 OptionPanel.path_property_may_not_be_empty=Path property may not be empty! Change has been reverted.
@@ -1467,8 +1471,12 @@ save_unsaved=Save the following mindmap?
 save_unsaved_styles=Save styles?
 SaveAcceleratorPresetsAction.text=Save hot key set...
 SaveAction.text=&Save map
+SaveAction_readonlyMsg=This map is read-only. Please use 'File->Save map as...' to save this map.
+SaveAction_readonlyTitle=Attempt to save read-only map
 SaveAll.text=Save a&ll opened maps
 SaveAll.tooltip=Saves all opened maps
+SaveAs_toReadonlyMsg={0} is read-only. Please save to a different file.
+SaveAs_toReadonlyTitle=Attempt to save to read-only file
 SaveAsAction.text=Save map &as...
 saved=Saved
 saving_canceled=Saving canceled
