Squashed alpha-1.5.1-pre06
commit c153a39611031113d4f13643cd727fa7fb481593
Merge: e4d60dc 21cd2f0
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Thu Nov 26 19:30:51 2015 +0100

    Merge branch '1.5.x' of https://github.com/freeplane/freeplane into 1.5.x

commit e4d60dc3216c6f3d36e8912daf4b9970140c416a
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Thu Nov 26 19:30:43 2015 +0100

    Fix attribute editor formatting

commit 21cd2f038873e7baf961fb776ee1149458b547a1
Merge: f5dbcc6 77fc225
Author: Weblate <noreply@weblate.org>
Date:   Thu Nov 26 19:06:37 2015 +0100

    Merge remote-tracking branch 'origin/1.5.x' into 1.5.x

commit 77fc2255a229c1ff481dc8caecf3ef7b6ce2c87a
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Thu Nov 26 19:06:33 2015 +0100

    Format translation

commit f5dbcc64beaee2f85804db52b393971c865bf8d9
Merge: 4d9f5dd 0d24313
Author: Weblate <noreply@weblate.org>
Date:   Thu Nov 26 18:50:47 2015 +0100

    Merge remote-tracking branch 'origin/1.5.x' into 1.5.x

commit 4d9f5ddb9fe71791857d32e5b38b59167ced9d4e
Author: hokorobi <hokorobi.hokorobi@gmail.com>
Date:   Wed Nov 25 15:52:35 2015 +0100

    Translated using Weblate (Japanese)

    Currently translated at 99.5% (1841 of 1849 strings)

commit ac7cee1377a57f4f34240c1863ba03b2b7ec0d2b
Author: Ldm Public <ldmpub@gmail.com>
Date:   Tue Nov 24 21:41:46 2015 +0100

    Translated using Weblate (French)

    Currently translated at 99.7% (1845 of 1849 strings)

commit 0d24313b6b20ee0d69c89addfec33a1e55a08b27
Merge: 47a1ead e287cd8
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Thu Nov 26 18:50:22 2015 +0100

    Merge branch '1.5.x' of https://github.com/freeplane/freeplane into 1.5.x

commit 47a1eadf024f72c22890f6d43ebe2022e84dd570
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Thu Nov 26 18:50:10 2015 +0100

    Save localized html in details, do not expand

commit cfd701b4f0983303a82b11e23f1367d596d2a4e1
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Thu Nov 26 18:47:12 20

--- a/freeplane/resources/translations/Resources_fr.properties
+++ b/freeplane/resources/translations/Resources_fr.properties
@@ -871,6 +871,7 @@ NodeListAction.tooltip=Rechercher et remplacer le texte des n\u0153uds (les n\u0
 NodeShapeAction.bubble.text=Bulle
 NodeShapeAction.circle.text=Cercle
 NodeShapeAction.fork.text=Fourche
+NodeShapeAction.hexagon.text=Hexagone
 NodeShapeAction.narrow_hexagon.text=Hexagone ajust\u00E9
 NodeShapeAction.oval.text=Ovale
 NodeShapeAction.small_bubble.text=Petite bulle
@@ -1035,6 +1036,7 @@ OptionPanel.groovy_editor_font=Police identifiant la syntaxe Groovy
 OptionPanel.groovy_editor_font.tooltip=S\u00E9lectionnez les polices 'Dialog' ou 'Monospace' si vous souhaitez utiliser des caract\u00E8res unicode !
 OptionPanel.groovy_editor_font_size=Taille de police pour la syntaxe Groovy
 OptionPanel.gtk=Gtk
+OptionPanel.hexagon=Hexagone
 OptionPanel.hide_edge=Invisible
 OptionPanel.highlight_formulas=Entourer les formules
 OptionPanel.horizontal=Rectiligne
