--- a/freeplane/resources/translations/Resources_hr.properties
+++ b/freeplane/resources/translations/Resources_hr.properties
@@ -871,8 +871,9 @@ NodeListAction.tooltip=Poka\u017Ei sve \u010Dvorove kao pretra\u017Eiv popis sa 
 NodeShapeAction.bubble.text=&Mjehuri\u0107
 NodeShapeAction.circle.text=Krug
 NodeShapeAction.fork.text=Ra&\u010Dva
+NodeShapeAction.hexagon.text=\u0160esterokut
 NodeShapeAction.narrow_hexagon.text=Uski \u0161esterokut
-NodeShapeAction.oval.text=Oval
+NodeShapeAction.oval.text=Elipsa
 NodeShapeAction.small_bubble.text=Mali mjehuri\u0107
 NodeShapeAction.small_wide_hexagon.text=Mali \u0161esterokut
 NodeShapeAction.wide_hexagon.text=\u0160iroki \u0161esterokut
@@ -1035,6 +1036,7 @@ OptionPanel.groovy_editor_font=Oblik slova ure\u0111iva\u010Da Groovy sintakse
 OptionPanel.groovy_editor_font.tooltip=Koristi 'Dialog' ili 'Monospaced' ako trebate unicode tabele!
 OptionPanel.groovy_editor_font_size=Veli\u010Dina slova ure\u0111iva\u010Da Groovy sintakse
 OptionPanel.gtk=Gtk
+OptionPanel.hexagon=\u0160esterokut
 OptionPanel.hide_edge=Skriveni rubovi
 OptionPanel.highlight_formulas=Osvijetli formulu
 OptionPanel.horizontal=Vodoravno
