--- a/freeplane/resources/translations/Resources_pt_PT.properties
+++ b/freeplane/resources/translations/Resources_pt_PT.properties
@@ -874,6 +874,7 @@ NodeListAction.tooltip=Mostra todos os n\u00F3s como lista para procura com prop
 NodeShapeAction.bubble.text=&Bolha
 NodeShapeAction.circle.text=C\u00EDrculo
 NodeShapeAction.fork.text=Bi&furca\u00E7\u00E3o
+NodeShapeAction.hexagon.text=Hex\u00E1gono
 NodeShapeAction.narrow_hexagon.text=Hex\u00E1gono estreito
 NodeShapeAction.oval.text=Oval
 NodeShapeAction.small_bubble.text=Bolha pequena
@@ -1038,6 +1039,7 @@ OptionPanel.groovy_editor_font=Tipo de letra do editor Groovy Syntax Highlightin
 OptionPanel.groovy_editor_font.tooltip=Utilize 'Di\u00E1logo' ou 'Mono-espa\u00E7o' se precisar de carateres Unicode!
 OptionPanel.groovy_editor_font_size=Tamanho da letra para o editor Groovy Syntax Highlighting
 OptionPanel.gtk=Gtk
+OptionPanel.hexagon=Hex\u00E1gono
 OptionPanel.hide_edge=Ocultar linha
 OptionPanel.highlight_formulas=Real\u00E7ar f\u00F3rmulas
 OptionPanel.horizontal=Horizontal
