--- a/freeplane/viewer-resources/translations/Resources_en.properties
+++ b/freeplane/viewer-resources/translations/Resources_en.properties
@@ -239,6 +239,7 @@ decrease_branch_font_size=Smaller font
 DecreaseNodeFontAction.text=Smaller font
 default=Default
 DefaultColorAction.text=Default color
+defaultstyle.attributes=Attributes
 defaultstyle.details=Details
 defaultstyle.floating=Floating node
 defaultstyle.note=Note
@@ -871,6 +872,7 @@ NodeShapeAction.bubble.text=&Bubble
 NodeShapeAction.circle.text=Circle
 NodeShapeAction.fork.text=&Fork
 NodeShapeAction.hexagon.text=Hexagon
+NodeShapeAction.hexagon2.text=Hexagon2
 NodeShapeAction.narrow_hexagon.text=Narrow hexagon
 NodeShapeAction.oval.text=Oval
 NodeShapeAction.small_bubble.text=Small bubble
@@ -1036,6 +1038,7 @@ OptionPanel.groovy_editor_font.tooltip=Use 'Dialog' or 'Monospaced' if you need 
 OptionPanel.groovy_editor_font_size=Font size for Groovy Syntax Highlighting Editor
 OptionPanel.gtk=Gtk
 OptionPanel.hexagon=Hexagon
+OptionPanel.hexagon2=Hexagon2
 OptionPanel.hide_edge=Hide edge
 OptionPanel.highlight_formulas=Highlight formulas
 OptionPanel.horizontal=Horizontal
