--- a/freeplane/resources/translations/Resources_ja.properties
+++ b/freeplane/resources/translations/Resources_ja.properties
@@ -870,6 +870,7 @@ NodeListAction.tooltip=\u30A4\u30F3\u30AF\u30EA\u30E1\u30F3\u30BF\u30EB\u30B5\u3
 NodeShapeAction.bubble.text=\u56F2\u307F(&B)
 NodeShapeAction.circle.text=\u5186
 NodeShapeAction.fork.text=\u30D5\u30A9\u30FC\u30AF(&F)
+NodeShapeAction.hexagon.text=\u516D\u89D2\u5F62
 NodeShapeAction.oval.text=\u6955\u5186
 NodeShapeAction.small_bubble.text=\u5C0F\u3055\u306A\u56F2\u307F
 NodeUpAction.text=\u30CE\u30FC\u30C9\u3092\u79FB\u52D5\uFF08\u5144\u5F1F\u9593\u3067\u4E0A\u3078\uFF09
@@ -1031,6 +1032,7 @@ OptionPanel.groovy_editor_font=Groovy\u30B7\u30F3\u30BF\u30C3\u30AF\u30B9\u30CF\
 OptionPanel.groovy_editor_font.tooltip=Unicode\u6587\u5B57\u304C\u5FC5\u8981\u306A\u3089 'Dialog' \u304B 'Monospaced' \u3092\u4F7F\u7528\u3057\u3066\u304F\u3060\u3055\u3044\uFF01
 OptionPanel.groovy_editor_font_size=Groovy\u30B7\u30F3\u30BF\u30C3\u30AF\u30B9\u30CF\u30A4\u30E9\u30A4\u30C8\u30A8\u30C7\u30A3\u30BF\u306E\u30D5\u30A9\u30F3\u30C8\u30B5\u30A4\u30BA
 OptionPanel.gtk=Gtk
+OptionPanel.hexagon=\u516D\u89D2\u5F62
 OptionPanel.hide_edge=\u7DDA\u3092\u96A0\u3059
 OptionPanel.highlight_formulas=\u8A08\u7B97\u5F0F\u30CE\u30FC\u30C9\u3092\u67A0\u56F2\u3044\u8868\u793A
 OptionPanel.horizontal=\u76F4\u89D2\u66F2\u304C\u308A
