--- a/freeplane/resources/translations/Resources_uk_UA.properties
+++ b/freeplane/resources/translations/Resources_uk_UA.properties
@@ -874,6 +874,7 @@ NodeListAction.tooltip=\u041F\u043E\u043A\u0430\u0437\u0430\u0442\u0438 \u0432\u
 NodeShapeAction.bubble.text=&\u0411\u0443\u043B\u044C\u0431\u0430\u0448\u043A\u0430
 NodeShapeAction.circle.text=\u041A\u043E\u043B\u043E
 NodeShapeAction.fork.text=\u0422\u0438\u043F \u0432\u0443\u0437\u043B\u0430 "\u043B\u0456\u043D\u0456\u044F"
+NodeShapeAction.hexagon.text=\u0428\u0435\u0441\u0442\u0438\u043A\u0443\u0442\u043D\u0438\u043A
 NodeShapeAction.narrow_hexagon.text=\u0412\u0443\u0437\u044C\u043A\u0438\u0439 \u0448\u0435\u0441\u0442\u0438\u043A\u0443\u0442\u043D\u0438\u043A
 NodeShapeAction.oval.text=\u041E\u0432\u0430\u043B
 NodeShapeAction.small_bubble.text=\u041C\u0430\u043B\u0430 \u0431\u0443\u043B\u044C\u0431\u0430\u0448\u043A\u0430
@@ -1038,6 +1039,7 @@ OptionPanel.groovy_editor_font=\u0428\u0440\u0438\u0444\u0442 \u0434\u043B\u044F
 OptionPanel.groovy_editor_font.tooltip=\u0412\u0438\u043A\u043E\u0440\u0438\u0441\u0442\u043E\u0432\u0443\u0439\u0442\u0435 'Dialog' \u0430\u0431\u043E 'Monospaced', \u044F\u043A\u0449\u043E \u0432\u0430\u043C \u043F\u043E\u0442\u0440\u0456\u0431\u043D\u0456 \u0441\u0438\u043C\u0432\u043E\u043B\u0438 Unicode!
 OptionPanel.groovy_editor_font_size=\u0420\u043E\u0437\u043C\u0456\u0440 \u0441\u0438\u043C\u0432\u043E\u043B\u0456\u0432 \u0434\u043B\u044F Groovy-\u0440\u0435\u0434\u0430\u043A\u0442\u043E\u0440\u0430 \u0437 \u043F\u0456\u0434\u0441\u0432\u0456\u0447\u0435\u043D\u043D\u044F\u043C \u0441\u0438\u043D\u0442\u0430\u043A\u0441\u0438\u0441\u0443
 OptionPanel.gtk=Gtk
+OptionPanel.hexagon=\u0428\u0435\u0441\u0442\u0438\u043A\u0443\u0442\u043D\u0438\u043A
 OptionPanel.hide_edge=\u0421\u0445\u043E\u0432\u0430\u0442\u0438 \u0440\u0435\u0431\u0440\u043E
 OptionPanel.highlight_formulas=\u041F\u0456\u0434\u0441\u0432\u0456\u0447\u0443\u0432\u0430\u0442\u0438 \u0444\u043E\u0440\u043C\u0443\u043B\u0438
 OptionPanel.horizontal=\u0413\u043E\u0440\u0438\u0437\u043E\u043D\u0442\u0430\u043B\u044C\u043D\u043E
