--- a/freeplane/resources/translations/Resources_zh_TW.properties
+++ b/freeplane/resources/translations/Resources_zh_TW.properties
@@ -873,6 +873,7 @@ NodeListAction.tooltip=\u986F\u793A\u6240\u6709\u7BC0\u9EDE\u7684\u5217\u8868, \
 NodeShapeAction.bubble.text=(&B)\u7BC0\u9EDE\u5916\u89C0\u6539\u6210\u6C23\u6CE1\u6846
 NodeShapeAction.circle.text=\u5713\u5708
 NodeShapeAction.fork.text=(&F)\u7BC0\u9EDE\u5916\u89C0\u6539\u6210\u5E95\u7DDA
+NodeShapeAction.hexagon.text=\u516D\u89D2\u5F62
 NodeShapeAction.narrow_hexagon.text=\u72F9\u7A84\u516D\u89D2\u5F62
 NodeShapeAction.oval.text=\u6A62\u5713\u5F62
 NodeShapeAction.small_bubble.text=\u5C0F\u6C23\u6CE1
@@ -1037,6 +1038,7 @@ OptionPanel.groovy_editor_font=\u5B57\u9AD4\u70BA Groovy \u7684\u8A9E\u6CD5\u544
 OptionPanel.groovy_editor_font.tooltip=\u5982\u679C\u60A8\u9700\u8981 unicode \u5B57\u5143\uFF0C\u4F7F\u7528 '\u5C0D\u8A71\u65B9\u584A' \u6216\u8005 '\u55AE\u9593\u9694'\uFF01
 OptionPanel.groovy_editor_font_size=\u5B57\u9AD4\u5927\u5C0F\u70BA Groovy \u7684\u8A9E\u6CD5\u5448\u73FE\u9AD8\u4EAE\u5EA6\u7DE8\u8F2F
 OptionPanel.gtk=Gtk
+OptionPanel.hexagon=\u516D\u89D2\u5F62
 OptionPanel.hide_edge=\u96B1\u85CF\u5206\u652F\u7DDA
 OptionPanel.highlight_formulas=\u5F37\u8ABF\u516C\u5F0F
 OptionPanel.horizontal=\u6C34\u5E73\u7DDA
