Squashed alpha-1.5.1-pre04
commit bfa52acce56255b100b2faae229de442a0948268
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Nov 22 14:34:34 2015 +0100

    Hexagonal node shapes

commit d4ea0648590fc22030befa05e0c1bacf8c1de310
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Nov 22 12:49:57 2015 +0100

    Extract class VariableInsetsMainView

commit 7e534bb16bcc5edd16d89e826e0c46209b05d63d
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Nov 22 12:45:58 2015 +0100

    Refactor : move getConnectorPoint from OvalMainView to BigOvalMainView

commit 02a54824cfcbdb12780793cfe47da8130e7dfae3
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Nov 22 11:51:26 2015 +0100

    Fix template map inconsistencies

commit dd1930be66c5ae0c1a58a7c0fe29af9e28ae200a
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Nov 22 11:47:14 2015 +0100

    Fix style root format for old maps

commit d275252a6df5cdbe9c86265f24f2c868a864122d
Merge: bf97785 474a754
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Nov 22 11:28:31 2015 +0100

    Merge branch '1.5.x' of https://github.com/freeplane/freeplane into 1.5.x

commit bf97785de5fbcb56593e4b355afd6e38cf39cea1
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Nov 22 11:19:12 2015 +0100

    Fix text properties and maps: replace big oval by oval and remove small
    oval

commit b6184bdacc4ad39db24f05e45457e155f5debee4
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Nov 22 11:08:12 2015 +0100

    Fix oval shape insets calculation

commit 474a754461f027e75be396ac72ad1467d0807494
Author: Volker Boerchers <boercher@web.de>
Date:   Sat Nov 21 20:34:33 2015 +0100

    make Javascript scripts available with Java 1.8

    Different from Java 1.6 to 1.7 Javascript libraries are not in
    rt.jar but in ext.lib.dirs - by adding these jars to the scripts
    class path not only Javascript is available but also JavaFX to scripts

commit c62957ea78df4a19a31dfcd1a5e86988fd13ab15
Author: Volker Boercher

--- a/freeplane/resources/translations/Resources_nb.properties
+++ b/freeplane/resources/translations/Resources_nb.properties
@@ -47,7 +47,7 @@ addons.installer.missing.properties=Manglende egenskaper: {0}
 addons.installer.success=Installasjonen gikk bra.\nStart programmet p\u00E5 nytt, s\u00E5 er tillegget tilgjengelig.
 addons.installer.success.update=Oppdateringen fra {0} til {1} var vellykket.\nNoen funksjoner vil f\u00F8rst v\u00E6re tilgjengelige etter omstart.
 addons.installer.too.new=Denne versjonen av Freeplane {0} er for ny. Dette tillegget st\u00F8tter opp til {1}
-addons.installer.too.old=Denne versjonen av Freeplane er for gammel. Dette tillegget krever minst {1}
+addons.installer.too.old=Denne versjonen av Freeplane {0} er for gammel. Dette tillegget krever minst {1}
 addons.installer.update=Oppdater fra versjon {0}
 addons.site=http://freeplane.sourceforge.net/addons/
 AddStyleAttributes.text=Egenskaper fra mal
