--- a/freeplane/viewer-resources/translations/Resources_en.properties
+++ b/freeplane/viewer-resources/translations/Resources_en.properties
@@ -867,12 +867,14 @@ NodeExtensions.EditNodeExtensions=Edit node extensions
 NodeExtensions.RemoveNodeExtensions=Remove node extensions
 NodeListAction.text=Find and replace...
 NodeListAction.tooltip=Shows all nodes as a searchable list with filter properties.
-NodeShapeAction.big_oval.text=Big oval
 NodeShapeAction.bubble.text=&Bubble
 NodeShapeAction.circle.text=Circle
 NodeShapeAction.fork.text=&Fork
+NodeShapeAction.narrow_hexagon.text=Narrow hexagon
+NodeShapeAction.oval.text=Oval
 NodeShapeAction.small_bubble.text=Small bubble
-NodeShapeAction.small_oval.text=Small oval
+NodeShapeAction.small_wide_hexagon.text=Small hexagon
+NodeShapeAction.wide_hexagon.text=Wide hexagon
 NodeUpAction.text=Move node (Sibling up)
 nonboldify_branch=Unboldify
 nonitalicise_branch=Unitalicise
@@ -929,7 +931,6 @@ OptionPanel.automaticFormat_level2=1. Level node format
 OptionPanel.backup_file_number=Number of kept backup files
 OptionPanel.Behaviour=Behaviour
 OptionPanel.bezier=Smoothly curved (bezier)
-OptionPanel.big_oval=Big oval
 OptionPanel.bubble=Bubble
 OptionPanel.ca=Catalan, Valencian / Catal\u00E0
 OptionPanel.Cancel=Cancel
@@ -1096,6 +1097,7 @@ OptionPanel.max_shortened_text_length=Maximum shortened text width
 OptionPanel.metal=Metal
 OptionPanel.min_node_width=Min node width
 OptionPanel.motif=Motif
+OptionPanel.narrow_hexagon=Narrow hexagon
 OptionPanel.nb=Norwegian Bokm\u00e5l / Norsk bokm\u00e5l
 OptionPanel.never_save_folding=Never
 OptionPanel.nl=Dutch, Flemish / Nederlands, Vlaams
@@ -1130,6 +1132,7 @@ OptionPanel.org.freeplane.plugin.bugreport.denied=Never send
 OptionPanel.org.freeplane.plugin.bugreport.userid=Optional identifier to be sent
 OptionPanel.outline_hgap=Horizontal distance
 OptionPanel.outline_vgap=Vertical distance
+OptionPanel.oval=Oval
 OptionPanel.paint_connectors_behind=Paint connectors behind nodes
 OptionPanel.parse_data=Recognize input of numbers and date-time
 OptionPanel.parse_data.tooltip=Try to parse date, date-time and number input and apply standard formats. Examples: 100,000.00, 12/31, 12/31/99, 1999-12-31 and 1999-12-31 23:59
@@ -1270,7 +1273,7 @@ OptionPanel.sk=Slovak / sloven\u010dina
 OptionPanel.sl=Slovene / sloven\u0161\u010dina
 OptionPanel.slow_scroll_selected_node=Slow scrolling to selected node
 OptionPanel.small_bubble=Small bubble
-OptionPanel.small_oval=Small oval
+OptionPanel.small_wide_hexagon=Small hexagon
 OptionPanel.spelling_opt_case_sensitive=Case sensitive
 OptionPanel.spelling_opt_ignore_all_caps_words=Ignore all upper case words.
 OptionPanel.spelling_opt_ignore_capitalization=Ignore capital letters at word begin
@@ -1335,6 +1338,7 @@ OptionPanel.vertical_child_gap.tooltip=Vertical distance between child nodes
 OptionPanel.vi=Vietnamese / Ti\u1ebfng Vi\u1ec7t
 OptionPanel.wheel_velocity=Speed
 OptionPanel.wheel_velocity.tooltip=A higher value results in fast mouse wheel move effects on the map.
+OptionPanel.wide_hexagon=Wide hexagon
 OptionPanel.windows=Windows
 OptionPanel.zh_CN=Chinese, simplified / \u7b80\u4f53\u5b57
 OptionPanel.zh_TW=Chinese, traditional / \u7e41\u9ad4\u5b57
