--- a/freeplane/resources/translations/Resources_pt_PT.properties
+++ b/freeplane/resources/translations/Resources_pt_PT.properties
@@ -930,8 +930,6 @@ OptionPanel.backup_file_number=N\u00FAmero de c\u00F3pias de seguran\u00E7a a ma
 OptionPanel.Behaviour=Comportamento
 OptionPanel.bezier=Curva suave (B\u00E9zier)
 OptionPanel.bubble=Bolha
-OptionPanel.bubble_vertical_margin=Margem da bolha
-OptionPanel.bubble_vertical_margin.tooltip=Espa\u00E7o vertical na margem da bolha do n\u00F3
 OptionPanel.ca=Catal\u00E3o, Valencia/Catal\u00E0
 OptionPanel.Cancel=Cancelar
 OptionPanel.center_selected_node=Centrar n\u00F3 selecionado automaticamente
@@ -1757,6 +1755,7 @@ styles.subtopic=Subt\u00F3pico
 styles.topic=T\u00F3pico
 styles.user-defined=Estilos do utilizador
 styles.website=P\u00E1gina Web
+styles_background_html=\n <html>\n <head>\n </head>\n <body>\n <table width="800" style="text-align: left; vertical-align: top">\n <tr valign="top">\n <th>\n <div style="margin-top: 0pt; margin-right: 0pt; margin-bottom: 0pt; margin-left: 0pt; text-align: center; font-weight: bold">\n Sobre este conjunto de estilo\n </div>\n <div style="text-align: left; font-weight: normal">\n <div style="margin: 3pt">\n Este padr\u00E3o foi desenvolvido ap\u00F3s 11 anos de persquisa pedag\u00F3gica sobre como tornar o processo de conhecimento mais f\u00E1cil e r\u00E1pido.\n </div>\n <div style="margin: 3pt">\n Tenta tornar os processos de assimila\u00E7\u00E3o, processamento, absor\u00E7\u00E3o, compreens\u00E3o, dom\u00EDnio e mestrado de conhecimento, a informa\u00E7\u00E3o e as ideias, t\u00E3o f\u00E1ceis e r\u00E1pidos quanto poss\u00EDvel.\n </div>\n <div style="margin: 3pt">\n Foi desenvolvido por Jonas Batista (Brasil).\n Pode encontrar mais informa\u00E7\u00E3o em <a href="http://www.jonasbatista.com.br/">www.jonasbatista.com.br/ </a>\n </div>\n </div>\n </th>\n <th>\n <img src="freeplaneresource:/images/JonasBatista.jpg"/>\n <div style="text-align: center">\n Jonas Batista<br/>\n </div>\n </th>\n </tr>\n </table>\n </body>\n </html>
 styles_menu=Estilos dispon\u00EDveis
 submenu_keystroke_in_use_error=Imposs\u00EDvel usar o atalho {0} para o submenu {1}. Atalho removido.
 summary_nodes=N\u00F3s-resumo
