--- a/freeplane/resources/translations/Resources_zh_TW.properties
+++ b/freeplane/resources/translations/Resources_zh_TW.properties
@@ -929,8 +929,6 @@ OptionPanel.backup_file_number=\u4FDD\u5B58\u7684\u5099\u4EFD\u6A94\u6848\u6578\
 OptionPanel.Behaviour=\u7DE8\u8F2F\u884C\u70BA\u8A2D\u5B9A
 OptionPanel.bezier=\u8C9D\u6C0F\u66F2\u7DDA
 OptionPanel.bubble=\u6C23\u6CE1\u6846
-OptionPanel.bubble_vertical_margin=\u6C23\u6CE1\u908A\u7DE3
-OptionPanel.bubble_vertical_margin.tooltip=\u5728\u6C23\u6CE1\u7BC0\u9EDE\u908A\u7DE3\u7684\u5782\u76F4\u7A7A\u9593
 OptionPanel.ca=Catal\u00E0 (\u52A0\u6CF0\u7F85\u5C3C\u4E9E\u6587 / \u74E6\u502B\u897F\u4E9E\u6587)
 OptionPanel.Cancel=\u53D6\u6D88
 OptionPanel.center_selected_node=\u5C07\u9078\u53D6\u7684\u7BC0\u9EDE\u7F6E\u65BC\u4E2D\u592E
@@ -1755,6 +1753,7 @@ styles.subtopic=\u5B50\u6A19\u984C
 styles.topic=\u6A19\u984C
 styles.user-defined=\u4F7F\u7528\u8005\u5B9A\u7FA9\u6A23\u5F0F
 styles.website=\u7DB2\u7AD9
+styles_background_html=\n <html>\n <head>\n </head>\n <body>\n <table width="800" style="text-align: left; vertical-align: top">\n <tr valign="top">\n <th>\n <div style="margin-top: 0pt; margin-right: 0pt; margin-bottom: 0pt; margin-left: 0pt; text-align: center; font-weight: bold">\n \u5C0D\u65BC\u9019\u7A2E\u6A23\u5F0F\u8A2D\u5B9A\n </div>\n <div style="text-align: left; font-weight: normal">\n <div style="margin: 3pt">\n\u9019\u500B\u6A19\u6E96\u662F\u88AB\u958B\u767C\u5F8C 11 \u5E74\u5C0D\u6559\u5B78\u65B9\u5F0F\u7684\u7814\u7A76\uFF0C\u5982\u4F55\u4F7F\u77E5\u8B58\u7684\u904E\u7A0B\u66F4\u5BB9\u6613\u548C\u66F4\u5FEB\u3002\n </div>\n <div style="margin: 3pt">\n\u5B83\u7684\u76EE\u7684\u662F\u8981\u4F7F\u904E\u7A0B\u6D88\u5316\u3001\u52A0\u5DE5\u3001\u5438\u6536\u3001\u7406\u89E3\u7BC4\u570D\u548C\u638C\u63E1\u77E5\u8B58\u3001\u8CC7\u8A0A\u548C\u60F3\u6CD5\u80FD\u5FEB\u901F\u548C\u5BB9\u6613\u3002\n </div>\n <div style="margin: 3pt">\n\u5B83\u5DF2\u7D93\u7531 Jonas Batista\uFF08\u5DF4\u897F\uFF09\u5236\u5B9A\u4E86\u3002\n \u60A8\u53EF\u4EE5\u5728\u6B64\u627E\u5230\u66F4\u591A\u8CC7\u8A0A\uFF1A<a href="http://www.jonasbatista.com.br/">www.jonasbatista.com.br/ </a>\n </div>\n </div>\n </th>\n <th>\n <img src="freeplaneresource:/images/JonasBatista.jpg"/>\n <div style="text-align: center">\n Jonas Batista<br/>\n </div>\n </th>\n </tr>\n </table>\n </body>\n </html>
 styles_menu=\u53EF\u7528\u7684\u6A23\u5F0F
 submenu_keystroke_in_use_error=\u5B50\u9078\u55AE {1} \u7121\u6CD5\u4F7F\u7528\u6309\u9375 {0}\uFF0C\u79FB\u9664\u6309\u9375\u3002
 summary_nodes=\u7E3D\u7D50\u7BC0\u9EDE
