Squashed alpha-1.5.1-pre07
commit 314b165870412d63b3249e16aa5eb8e7dc69c309
Merge: f541741 6ae0032
Author: Weblate <noreply@weblate.org>
Date:   Fri Nov 27 20:18:53 2015 +0100

    Merge remote-tracking branch 'origin/1.5.x' into 1.5.x

commit f5417418c0c3efbb6b50f7aab627a3e53ff4d9b0
Author: jan madsen <jsm@janz.dk>
Date:   Fri Nov 27 18:59:56 2015 +0100

    Translated using Weblate (Danish)

    Currently translated at 97.9% (1810 of 1847 strings)

commit 6ae0032b6c10eb7acae6fedcd36192ef96537cb7
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Fri Nov 27 20:18:15 2015 +0100

    Change shape layout: always considermax and min width as limits

commit a2236b8982542d2f498c38d903a558499f364e8f
Merge: 7d4aad3 564370c
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Fri Nov 27 18:12:10 2015 +0100

    Merge branch '1.5.x' of https://github.com/freeplane/freeplane into 1.5.x

commit 7d4aad349f36c4258ccb9bff32991d0e9d9c7459
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Fri Nov 27 18:11:49 2015 +0100

    Optimize margin factor for ovals

commit 564370c3894068db882a48794f2a59f0c46510c9
Merge: 5711c94 9a35e0b
Author: Weblate <noreply@weblate.org>
Date:   Fri Nov 27 17:40:57 2015 +0100

    Merge remote-tracking branch 'origin/1.5.x' into 1.5.x

commit 5711c94268130d5b6dd35b73c47f9a1ef9fcb563
Author: Ldm Public <ldmpub@gmail.com>
Date:   Fri Nov 27 16:30:42 2015 +0100

    Translated using Weblate (French)

    Currently translated at 99.7% (1843 of 1847 strings)

commit 9a35e0bb5529a3ebb711cf13e192104f36b19e4d
Merge: bfe7d9a 7397dba
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Fri Nov 27 17:40:44 2015 +0100

    Merge branch '1.5.x' of https://github.com/freeplane/freeplane into 1.5.x

commit bfe7d9a86797a60376cf09ad80a01f5030aff45f
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Fri Nov 27 17:40:37 2015 +0100

    Paint cell border in attribute tool tips

commit 7397dba1fe8cd32145d2c47f1a78364c12efcbe1
Merge: 64eca7f 98521d7
Author: Weblate <noreply@w

--- a/freeplane/viewer-resources/translations/Resources_en.properties
+++ b/freeplane/viewer-resources/translations/Resources_en.properties
@@ -869,14 +869,10 @@ NodeExtensions.RemoveNodeExtensions=Remove node extensions
 NodeListAction.text=Find and replace...
 NodeListAction.tooltip=Shows all nodes as a searchable list with filter properties.
 NodeShapeAction.bubble.text=&Bubble
-NodeShapeAction.circle.text=Circle
 NodeShapeAction.fork.text=&Fork
-NodeShapeAction.hexagon.text=Hexagon
-NodeShapeAction.hexagon2.text=Hexagon2
 NodeShapeAction.narrow_hexagon.text=Narrow hexagon
 NodeShapeAction.oval.text=Oval
-NodeShapeAction.small_bubble.text=Small bubble
-NodeShapeAction.small_wide_hexagon.text=Small hexagon
+NodeShapeAction.rectangle.text=Rectangle
 NodeShapeAction.wide_hexagon.text=Wide hexagon
 NodeUpAction.text=Move node (Sibling up)
 nonboldify_branch=Unboldify
@@ -941,7 +937,6 @@ OptionPanel.center_selected_node=Center selected node automatically
 OptionPanel.check_updates_automatically=Check for updates on program start
 OptionPanel.childpattern=Child Pattern
 OptionPanel.childpattern.tooltip=The selected pattern is applied to all children.
-OptionPanel.circle=Circle
 OptionPanel.clear_all_setters=Switch all
 OptionPanel.clear_all_setters.tooltip=Enables or disables all change indications.
 OptionPanel.cloud=Cloud
@@ -1037,8 +1032,6 @@ OptionPanel.groovy_editor_font=Font for Groovy Syntax Highlighting Editor
 OptionPanel.groovy_editor_font.tooltip=Use 'Dialog' or 'Monospaced' if you need unicode chars!
 OptionPanel.groovy_editor_font_size=Font size for Groovy Syntax Highlighting Editor
 OptionPanel.gtk=Gtk
-OptionPanel.hexagon=Hexagon
-OptionPanel.hexagon2=Hexagon2
 OptionPanel.hide_edge=Hide edge
 OptionPanel.highlight_formulas=Highlight formulas
 OptionPanel.horizontal=Horizontal
@@ -1162,6 +1155,7 @@ OptionPanel.printonwhitebackground.tooltip=<html>Always use white background for
 OptionPanel.pt_BR=Portuguese (Brasil) / Portugu\u00eas (Brasil)
 OptionPanel.pt_PT=Portuguese (Portugal) / Portugu\u00eas (Portugal)
 OptionPanel.RECT=Rectangle
+OptionPanel.rectangle=Rectangle
 OptionPanel.relative=Relative
 OptionPanel.remind_type_of_new_nodes.tooltip=<html>"Ask" will ask you (use in doubt).<br>"Yes" displays the rich text editor.<br>"No" displays the plain text editor.</html>
 OptionPanel.remind_use_rich_text_in_new_nodes=Use rich text for pasted nodes
@@ -1258,6 +1252,8 @@ OptionPanel.set_property_text=Change
 OptionPanel.set_property_text.tooltip=Check to change this style property
 OptionPanel.setscript=Change?
 OptionPanel.setscript.tooltip=A script can be associated to the style.
+OptionPanel.shape_horizontal_margin=Horizontal margin
+OptionPanel.shape_vertical_margin=Vertical margin
 OptionPanel.sharp_bezier=Sharply curved (bezier)
 OptionPanel.sharp_linear=Sharp linear
 OptionPanel.show_icon_for_attributes=Show icon for attributes
@@ -1277,8 +1273,6 @@ OptionPanel.single_instance_force.tooltip=Avoid a second instance even if there 
 OptionPanel.sk=Slovak / sloven\u010dina
 OptionPanel.sl=Slovene / sloven\u0161\u010dina
 OptionPanel.slow_scroll_selected_node=Slow scrolling to selected node
-OptionPanel.small_bubble=Small bubble
-OptionPanel.small_wide_hexagon=Small hexagon
 OptionPanel.spelling_opt_case_sensitive=Case sensitive
 OptionPanel.spelling_opt_ignore_all_caps_words=Ignore all upper case words.
 OptionPanel.spelling_opt_ignore_capitalization=Ignore capital letters at word begin
@@ -1326,6 +1320,7 @@ OptionPanel.undo_levels=Undo levels
 OptionPanel.undo_levels.tooltip=<html>Determines how many steps are stored that can be undone via "Undo".</html>
 OptionPanel.unfold_on_paste=Unfold node on paste
 OptionPanel.unfold_on_paste.tooltip=Unfold node on paste or Drag-And-Drop
+OptionPanel.uniform_shape=Uniform
 OptionPanel.use_common_out_point_for_root_node=Edges start from one point at root node
 OptionPanel.use_common_out_point_for_root_node.tooltip=Edges start from one point at root node
 OptionPanel.use_tabbed_pane=Use Tabs
