--- a/freeplane/resources/translations/Resources_pt_PT.properties
+++ b/freeplane/resources/translations/Resources_pt_PT.properties
@@ -242,6 +242,7 @@ decrease_branch_font_size=Reduzir letra
 DecreaseNodeFontAction.text=Reduzir letra
 default=Predefini\u00E7\u00E3o
 DefaultColorAction.text=Cor predefinida
+defaultstyle.attributes=Atributos
 defaultstyle.details=Detalhes
 defaultstyle.floating=N\u00F3 flutuante
 defaultstyle.note=Nota
@@ -872,9 +873,7 @@ NodeExtensions.RemoveNodeExtensions=Remover extens\u00F5es do n\u00F3
 NodeListAction.text=Localizar e substituir...
 NodeListAction.tooltip=Mostra todos os n\u00F3s como lista para procura com propriedades de filtragem.
 NodeShapeAction.bubble.text=&Bolha
-NodeShapeAction.circle.text=C\u00EDrculo
 NodeShapeAction.fork.text=Bi&furca\u00E7\u00E3o
-NodeShapeAction.hexagon.text=Hex\u00E1gono
 NodeShapeAction.narrow_hexagon.text=Hex\u00E1gono estreito
 NodeShapeAction.oval.text=Oval
 NodeShapeAction.small_bubble.text=Bolha pequena
@@ -943,7 +942,6 @@ OptionPanel.center_selected_node=Centrar n\u00F3 selecionado automaticamente
 OptionPanel.check_updates_automatically=Procurar atualiza\u00E7\u00F5es no in\u00EDcio do programa
 OptionPanel.childpattern=Padr\u00E3o do n\u00F3-filho
 OptionPanel.childpattern.tooltip=O padr\u00E3o selecionado \u00E9 aplicado a todos os n\u00F3s-filhos.
-OptionPanel.circle=C\u00EDrculo
 OptionPanel.clear_all_setters=Trocar tudo
 OptionPanel.clear_all_setters.tooltip=Ativa ou desativa todas as indica\u00E7\u00F5es de altera\u00E7\u00E3o.
 OptionPanel.cloud=Nuvem
@@ -1039,7 +1037,6 @@ OptionPanel.groovy_editor_font=Tipo de letra do editor Groovy Syntax Highlightin
 OptionPanel.groovy_editor_font.tooltip=Utilize 'Di\u00E1logo' ou 'Mono-espa\u00E7o' se precisar de carateres Unicode!
 OptionPanel.groovy_editor_font_size=Tamanho da letra para o editor Groovy Syntax Highlighting
 OptionPanel.gtk=Gtk
-OptionPanel.hexagon=Hex\u00E1gono
 OptionPanel.hide_edge=Ocultar linha
 OptionPanel.highlight_formulas=Real\u00E7ar f\u00F3rmulas
 OptionPanel.horizontal=Horizontal
