Squashed alpha-1.5.1-pre02
commit 75bc400cf7dcb56091ca0fac59ac529f9f800db6
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Fri Nov 20 19:41:35 2015 +0100

    Fix small bubble problems

--- a/freeplane/viewer-resources/translations/Resources_en.properties
+++ b/freeplane/viewer-resources/translations/Resources_en.properties
@@ -1269,7 +1269,7 @@ OptionPanel.single_instance_force.tooltip=Avoid a second instance even if there 
 OptionPanel.sk=Slovak / sloven\u010dina
 OptionPanel.sl=Slovene / sloven\u0161\u010dina
 OptionPanel.slow_scroll_selected_node=Slow scrolling to selected node
-OptionPanel.small_bubble=Small oval
+OptionPanel.small_bubble=Small bubble
 OptionPanel.small_oval=Small oval
 OptionPanel.spelling_opt_case_sensitive=Case sensitive
 OptionPanel.spelling_opt_ignore_all_caps_words=Ignore all upper case words.
