Squashed alpha-1.5.1-pre03
commit 56f8c428f2c12969704e13801a7728a7d5d4bf54
Merge: 23d2f7b 801c882
Author: Weblate <noreply@weblate.org>
Date:   Sat Nov 21 13:22:41 2015 +0100

    Merge remote-tracking branch 'origin/1.5.x' into 1.5.x

commit 23d2f7be9f6a23985b5af41248c30e3c5bb4543d
Author: Ldm Public <ldmpub@gmail.com>
Date:   Fri Nov 20 23:32:16 2015 +0100

    Translated using Weblate (French)

    Currently translated at 99.7% (1839 of 1843 strings)

commit 120f1baa1d6ca75d6bdd7426cdf96832496bcc93
Author: Predrag Cuklin <pcuklin@gmail.com>
Date:   Sat Nov 21 11:37:23 2015 +0100

    Translated using Weblate (Croatian)

    Currently translated at 99.9% (1842 of 1843 strings)

commit 801c8823019cd4bed669b58082f368e6b91fbc28
Merge: a9cc405 46e48f1
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sat Nov 21 13:22:28 2015 +0100

    Merge branch '1.5.x' of https://github.com/freeplane/freeplane into 1.5.x

commit a9cc405401b007394aadc4f152fb61e08369c16c
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sat Nov 21 13:22:16 2015 +0100

    Fix oval/circle node shape color

commit b40c689e9d8a1abf2cd9f409f42587a5ea779f76
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sat Nov 21 13:20:26 2015 +0100

    Use circle border for all incoming / outgoing connectors and edges

commit 883f1709093a6f2dac32387dea4f8039e72637d3
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sat Nov 21 12:57:28 2015 +0100

    Let oval insets depend on its form

commit 46e48f13111e9d47411755d6741308df6333797d
Author: Олександр Пилипчук <pilipchukap@rambler.ru>
Date:   Fri Nov 20 23:23:03 2015 +0100

    Translated using Weblate (Ukrainian)

    Currently translated at 100.0% (1843 of 1843 strings)

commit dd1a3afdc5be52b12671aa387d3880e25b9e1252
Author: Pedro Albuquerque <palbuquerque73@gmail.com>
Date:   Fri Nov 20 19:12:16 2015 +0100

    Translated using Weblate (Portuguese (Portugal))

    Currently translated at 100.0% (1843 of 1843 strings)

commit 6e68136ec408f1eecc5c070d2320c

--- a/freeplane/resources/translations/Resources_hr.properties
+++ b/freeplane/resources/translations/Resources_hr.properties
@@ -137,6 +137,9 @@ attributes_visible_tooltip=Potvrdi ako \u017Eeli\u0161 da obilje\u017Eje bude vi
 automatic_layout=Automatski oblikovani izgled
 automatic_layout_disabled=Onemogu\u0107en
 automatically_save_message=Mapa je automatski spremljena (koriste\u0107i ime datoteke {0}) ...
+AutomaticEdgeColor.FOR_BRANCHES=za grane
+AutomaticEdgeColor.FOR_COLUMNS=za stupac
+AutomaticEdgeColor.ON_BRANCH_CREATION=kreirano na grani
 AutomaticEdgeColorHookAction.text=Automatska boja ruba
 AutomaticLayout.ALL=Za sve
 AutomaticLayout.COLUMNS=za stupce
@@ -865,8 +868,12 @@ NodeExtensions.EditNodeExtensions=Uredi pro\u0161irenja \u010Dvora
 NodeExtensions.RemoveNodeExtensions=Obri\u0161i pro\u0161irenja \u010Dvora
 NodeListAction.text=Tra\u017Ei i zamijeni...
 NodeListAction.tooltip=Poka\u017Ei sve \u010Dvorove kao pretra\u017Eiv popis sa svojstvima filtra.
+NodeShapeAction.big_oval.text=Veliki oval
 NodeShapeAction.bubble.text=&Mjehuri\u0107
+NodeShapeAction.circle.text=Krug
 NodeShapeAction.fork.text=Ra&\u010Dva
+NodeShapeAction.small_bubble.text=Mali mjehuri\u0107
+NodeShapeAction.small_oval.text=Mali oval
 NodeUpAction.text=\u010Cvor gore
 nonboldify_branch=Poni\u0161ti podebljanje
 nonitalicise_branch=Poni\u0161ti uko\u0161enost
@@ -923,6 +930,7 @@ OptionPanel.automaticFormat_level2=1. Razina oblika \u010Dvora
 OptionPanel.backup_file_number=Broj sigurnosnih kopija
 OptionPanel.Behaviour=Karakteristike
 OptionPanel.bezier=Bezier
+OptionPanel.big_oval=Veliki oval
 OptionPanel.bubble=Obla\u010Di\u0107
 OptionPanel.ca=Katalonski
 OptionPanel.Cancel=Odustani
@@ -930,6 +938,7 @@ OptionPanel.center_selected_node=Automatsko klizanje prikaza mape
 OptionPanel.check_updates_automatically=Provjeri za nadogradnju prilikom pokretanja programa
 OptionPanel.childpattern=Uzorak \u010Dvora "dijete"
 OptionPanel.childpattern.tooltip=Odabrani uzorak primjenit \u0107e se na svim \u010Dvorovima "dijete".
+OptionPanel.circle=Krug
 OptionPanel.clear_all_setters=Uklju\u010Di sve
 OptionPanel.clear_all_setters.tooltip=Omogu\u0107uje ili onemogu\u0107uje sve indikatore promjena.
 OptionPanel.cloud=Obla\u010Di\u0107
@@ -960,6 +969,7 @@ OptionPanel.default_browser_command_windows_9x.tooltip=<html>Za Windows 98 (znac
 OptionPanel.default_browser_command_windows_nt=Zadani naredbeni preglednik Windows Nt
 OptionPanel.default_browser_command_windows_nt.tooltip=<html>Za Windows NT (znaci "" su obavezni zbog veza,koji imaju "=" u svojem URL-u).</html>
 OptionPanel.default_charset=Skup znakova
+OptionPanel.default_save_dir=Zadana mapa spremanja
 OptionPanel.Defaults=Zadano
 OptionPanel.delete_automatic_saves_at_exit=Kod izlaza obri\u0161i automatski spremljene datoteke
 OptionPanel.delete_automatic_saves_at_exit.tooltip=<html> Ako \u017Eelite obrisati automatski spremljene datoteke kod normalnog zatvaranja programa Freeplane, stavite kva\u010Dicu u potvrdnom okviru</html>
@@ -1124,6 +1134,10 @@ OptionPanel.outline_vgap=Okomiti razmak
 OptionPanel.paint_connectors_behind=Crtaj poveznik iza \u010Dvorova
 OptionPanel.parse_data=Prepoznaj unos brojeva, datuma i vremena
 OptionPanel.parse_data.tooltip=Program analizira unos datuma, datuma-vremena i brojeva i primjenjuje standarde formate. Prijmeri: 100,000.00, 12/31, 12/31/99, 1999-12-31 and 1999-12-31 23:59
+OptionPanel.parse_formulas=Prepoznaj formule
+OptionPanel.parse_formulas.tooltip=\u010Cvorove koji po\u010Dinju sa "=" prepoznaje kao formulu: Pogledaj http://www.freeplane.org/wiki/index.php/Formulas.
+OptionPanel.parse_latex=Prepoznaj LaTeX
+OptionPanel.parse_latex.tooltip=Prepoznaje LaTeX zapise prema obliku ili prefiksu: Pogledaj http://www.freeplane.org/wiki/index.php/LaTeX_in_Freeplane.
 OptionPanel.PASTE_HTML=Zalijepi kao HTML
 OptionPanel.PASTE_PLAIN_TEXT=Zalijepi kao obi\u010Dan tekst
 OptionPanel.path_property_may_not_be_empty=Polje unosa nemo\u017Ee biti prazno, unesite putanju mapesigurnosnih kopija.
@@ -1256,6 +1270,8 @@ OptionPanel.single_instance_force.tooltip=Izbjegni otvaranje programa u novom pr
 OptionPanel.sk=Slova\u010Dki
 OptionPanel.sl=Slovenski
 OptionPanel.slow_scroll_selected_node=Sporo pomicanje do odabranog \u010Dvora
+OptionPanel.small_bubble=Mali mjehuri\u0107
+OptionPanel.small_oval=Mali oval
 OptionPanel.spelling_opt_case_sensitive=Osjetljiv na veli\u010Dinu (slova)
 OptionPanel.spelling_opt_ignore_all_caps_words=Zanemari rije\u010Di pisane VELIKIM SLOVIMA.
 OptionPanel.spelling_opt_ignore_capitalization=Zanemari VELIKA SLOVA na po\u010Detku rije\u010Di
@@ -1464,8 +1480,12 @@ save_unsaved=\u017Delite li spremiti slijede\u0107u Mentalnu mapu?
 save_unsaved_styles=\u017Delite li spremiti stilove?
 SaveAcceleratorPresetsAction.text=Pohrana grupe tipkovni\u010Dkih kratica F-trake\u2026
 SaveAction.text=&Spremi
+SaveAction_readonlyMsg=Mapa je samo za \u010Ditanje. Koristi 'Datoteka->Spremi mapu kao..' za spremanje ove mape.
+SaveAction_readonlyTitle=Poku\u0161aj spremanje "samo za \u010Ditanje" mape (datoteke)
 SaveAll.text=Spremi &sve otvoerne datoteke
 SaveAll.tooltip=Spremi sve otvorene mape
+SaveAs_toReadonlyMsg={0} je samo za \u010Ditanje. Molim, spremite datoteku pod drugim imenom..
+SaveAs_toReadonlyTitle=Poku\u0161aj spremanja u datoteku "samo za \u010Ditanje"
 SaveAsAction.text=Spremi kao...
 saved=Spremljeno
 saving_canceled=Spremanje otkazano
