--- a/freeplane/resources/translations/Resources_fr.properties
+++ b/freeplane/resources/translations/Resources_fr.properties
@@ -868,8 +868,12 @@ NodeExtensions.EditNodeExtensions=Modifier les extensions du n\u0153ud
 NodeExtensions.RemoveNodeExtensions=Supprimer les extensions du n\u0153ud
 NodeListAction.text=Rechercher et remplacer...
 NodeListAction.tooltip=Rechercher et remplacer le texte des n\u0153uds (les n\u0153uds sont affich\u00E9s dans un tableau)
+NodeShapeAction.big_oval.text=Grand ovale
 NodeShapeAction.bubble.text=Bulle
+NodeShapeAction.circle.text=Cercle
 NodeShapeAction.fork.text=Fourche
+NodeShapeAction.small_bubble.text=Petite bulle
+NodeShapeAction.small_oval.text=Petit ovale
 NodeUpAction.text=D\u00E9placer le n\u0153ud vers le haut
 nonboldify_branch=Supprimer le gras pour la branche
 nonitalicise_branch=Supprimer l'italique pour la branche
@@ -926,6 +930,7 @@ OptionPanel.automaticFormat_level2=Mise en forme des n\u0153uds de niveau 1
 OptionPanel.backup_file_number=Nombre de fichiers de sauvegarde conserv\u00E9s
 OptionPanel.Behaviour=Comportement
 OptionPanel.bezier=Courbe
+OptionPanel.big_oval=Grand ovale
 OptionPanel.bubble=Bulle
 OptionPanel.ca=Catalan
 OptionPanel.Cancel=Annuler
@@ -933,6 +938,7 @@ OptionPanel.center_selected_node=Centrer automatiquement la carte sur la s\u00E9
 OptionPanel.check_updates_automatically=V\u00E9rifier les mises \u00E0 jour au d\u00E9marrage
 OptionPanel.childpattern=Mod\u00E8le fils
 OptionPanel.childpattern.tooltip=Le mod\u00E8le s\u00E9lectionn\u00E9 est appliqu\u00E9 \u00E0 tous les fils
+OptionPanel.circle=Cercle
 OptionPanel.clear_all_setters=Modification g\u00E9n\u00E9rale
 OptionPanel.clear_all_setters.tooltip=Pilote l'ensemble des modifications.
 OptionPanel.cloud=Nuage
@@ -1024,7 +1030,9 @@ OptionPanel.fr=Fran\u00E7ais
 OptionPanel.gl=Gl
 OptionPanel.goto_note_end_on_edit=Placer le curseur en fin de note
 OptionPanel.grid_size=Pas pour la grille d'alignement des n\u0153uds (1 = aucune grille)
+OptionPanel.groovy_editor_font=Police identifiant la syntaxe Groovy
 OptionPanel.groovy_editor_font.tooltip=S\u00E9lectionnez les polices 'Dialog' ou 'Monospace' si vous souhaitez utiliser des caract\u00E8res unicode !
+OptionPanel.groovy_editor_font_size=Taille de police pour la syntaxe Groovy
 OptionPanel.gtk=Gtk
 OptionPanel.hide_edge=Invisible
 OptionPanel.highlight_formulas=Entourer les formules
@@ -1059,8 +1067,12 @@ OptionPanel.language=Langue de l'utilisateur
 OptionPanel.language.tooltip=<html>Langue de l'application.<br>La valeur 'automatique' d\u00E9tecte et utilise la langue du syst\u00E8me.
 OptionPanel.last=En bas
 OptionPanel.last_opened_list_length=Nombre de fichiers dans la liste des fichiers r\u00E9cents
+OptionPanel.latex_disable_editor=D\u00E9sactiver la mise en valeur de la syntaxe LaTeX
 OptionPanel.latex_disable_editor.tooltip=Cochez cette case si vous avez des difficult\u00E9s avec l'\u00E9diteur LaTeX
+OptionPanel.latex_editor_font=Police identifiant la syntaxe LaTeX
 OptionPanel.latex_editor_font.tooltip=S\u00E9lectionnez les polices 'Dialog' ou 'Monospace' si vous souhaitez utiliser des caract\u00E8res unicode !
+OptionPanel.latex_editor_font_size=Taille de police pour la syntaxe LaTeX
+OptionPanel.latex_macros=Macros LaTeX communes
 OptionPanel.layout_map_on_text_change=Rafra\u00EEchir la position des n\u0153uds pendant la saisie
 OptionPanel.layout_map_on_text_change.tooltip=Sur un ordinaiteur peu performant, il est recommand\u00E9 de d\u00E9sactiver cette option
 OptionPanel.linear=Droit
@@ -1125,6 +1137,7 @@ OptionPanel.parse_data.tooltip=<html>D\u00E9tecter les nombres et dates et les f
 OptionPanel.parse_formulas=Identifier les formules
 OptionPanel.parse_formulas.tooltip=Les formules d\u00E9butent par le caract\u00E8re '='. Voir http://www.freeplane.org/wiki/index.php/Formulas.
 OptionPanel.parse_latex=Reconna\u00EEtre LaTeX
+OptionPanel.parse_latex.tooltip=Reconna\u00EEtre les formules LaTeX gr\u00E2ce \u00E0 un pr\u00E9fixe ou un format, voir http://www.freeplane.org/wiki/index.php/LaTeX_in_Freeplane.
 OptionPanel.PASTE_HTML=Coller avec mise en forme
 OptionPanel.PASTE_PLAIN_TEXT=Coller comme texte brut
 OptionPanel.path_property_may_not_be_empty=Le dossier ne peut \u00EAtre vide ! R\u00E9tablissement des anciennes valeurs.
@@ -1256,6 +1269,8 @@ OptionPanel.single_instance_force.tooltip=Toujours utiliser une seule instance d
 OptionPanel.sk=Slovaque
 OptionPanel.sl=Slov\u00E8ne
 OptionPanel.slow_scroll_selected_node=D\u00E9filement doux jusqu'au n\u0153ud s\u00E9lectionn\u00E9
+OptionPanel.small_bubble=Petite bulle
+OptionPanel.small_oval=Petit ovale
 OptionPanel.spelling_opt_case_sensitive=Sensible \u00E0 la casse
 OptionPanel.spelling_opt_ignore_all_caps_words=Ignorer les mots en majuscule
 OptionPanel.spelling_opt_ignore_capitalization=Ignorer les mots d\u00E9butant par une majuscule
